# ytget-gui

./: .gitignore  CHANGELOG.md  Info.plist  LICENSE  README.fa.md  README.md  RELEASE_NOTES.md  YTGet.pyw  __init__.py  main.py  main_window.py  pyproject.toml  requirements.txt  settings.py  styles.py  version_info.txt
.github/workflows/: Installer.yml  Nuitka.yml  build&cross&test&release.yml  build&release.yml  build-cross-release.yml  build-mac-amd64  build-mac-amd64.yml  build.yml  cross&release.yml  cross.yml  installer.yml  macOS-test.yml  nuitka.yml  publish-pypi.yml  pypi.yml  release.yml  test.yml
dialogs/: advanced.py  preferences.py  update_manager.py
installer/: download-deps.ps1  setup.iss
widgets/: queue_item.py
workers/: cover_crop_worker.py  download_worker.py  title_fetcher.py
ytget/: __main__.py  main.py  main_window.py  settings.py  styles.py
ytget_gui/: icon.icns  main.py  main_window.py  settings.py  spotdl_settings.py  styles.py
ytget_gui/dialogs/: about_dialog.py  advanced.py  preferences.py  spotdl_preferences_tab.py  update_manager.py
ytget_gui/utils/: paths.py
ytget_gui/widgets/: queue_card.py
ytget_gui/workers/: cover_crop_worker.py  download_worker.py  spotdl_worker.py  thumb_fetcher.py  title_fetch_manager.py  title_fetcher.py
