[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytget"
version = "2.4.6"
description = "A GUI YouTube downloader powered by yt-dlp"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Erfan Namira", email = "erfannamira@gmail.com" }
]
keywords = ["youtube", "downloader", "yt-dlp", "gui", "video", "audio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "yt-dlp",
    "PySide6",
    "requests",
    "mutagen",
    "Pillow",
    "packaging"
]

[project.urls]
Homepage = "https://github.com/ErfanNamira/ytget"
Repository = "https://github.com/ErfanNamira/ytget"
Issues = "https://github.com/ErfanNamira/ytget/issues"

[project.scripts]
ytget = "ytget.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ytget = ["icon.ico"]